# StringsAlgorithms

./: CMakeLists.txt  README.md  StringUtils.cpp  StringUtils.h  Tests.cpp  build.sh  buildInducedSorting.sh  buildUkkonen.sh  main.cpp
SuffixArray/: CMakeLists.txt  InducedSorting.cpp  InducedSorting.h  SuffixArrayUtils.cpp  SuffixArrayUtils.h
SuffixTreeUtils/: CMakeLists.txt  ISuffixTreeBuilder.h  SuffixTree.cpp  SuffixTree.h  SuffixTreeNode.cpp  SuffixTreeNode.h  UkkonenAlgorithm.cpp  UkkonenAlgorithm.h
Tests/: Tests.cpp
